--- a/RedditSharp/RedditSharp.csproj
+++ b/RedditSharp/RedditSharp.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Moderator Actions\ModActionType.cs" />
     <Compile Include="Things\Contributor.cs" />
     <Compile Include="Things\ModAction.cs" />
-    <Compile Include="Utils\DateTimeExtensions.cs" />
+    <Compile Include="DateTime\DateTimeExtensions.cs" />
     <Compile Include="SpamFilterSettings.cs" />
     <Compile Include="Things\AuthenticatedUser.cs" />
     <Compile Include="AuthProvider.cs" />
@@ -62,25 +62,25 @@
     <Compile Include="Catchpha\CaptchaFailedException.cs" />
     <Compile Include="Catchpha\CaptchaResponse.cs" />
     <Compile Include="Catchpha\ConsoleCaptchaSolver.cs" />
-    <Compile Include="DuplicateLinkException.cs" />
+    <Compile Include="Exceptions\DuplicateLinkException.cs" />
     <Compile Include="Interfaces\ICaptchaSolver.cs" />
     <Compile Include="Things\Comment.cs" />
     <Compile Include="Things\CreatedThing.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="FlairTemplate.cs" />
+    <Compile Include="Flairs\FlairTemplate.cs" />
     <Compile Include="Interfaces\IWebAgent.cs" />
     <Compile Include="LinkData.cs" />
     <Compile Include="Listing.cs" />
     <Compile Include="Moderator Actions\ModeratorPermission.cs" />
     <Compile Include="Moderator Actions\ModeratorUser.cs" />
     <Compile Include="MultipartFormBuilder.cs" />
-    <Compile Include="FlairType.cs" />
+    <Compile Include="Flairs\FlairType.cs" />
     <Compile Include="Things\Post.cs" />
     <Compile Include="Things\PrivateMessage.cs" />
     <Compile Include="Reddit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedditAPINameAttribute.cs" />
-    <Compile Include="RedditException.cs" />
+    <Compile Include="Exceptions\RedditException.cs" />
     <Compile Include="Things\RedditUser.cs" />
     <Compile Include="SubmitData.cs" />
     <Compile Include="Things\Subreddit.cs" />
@@ -89,11 +89,11 @@
     <Compile Include="Subreddit Information\SubredditStyle.cs" />
     <Compile Include="TextData.cs" />
     <Compile Include="Things\Thing.cs" />
-    <Compile Include="UnixTimeStamp.cs" />
-    <Compile Include="UnixTimestampConverter.cs" />
+    <Compile Include="DateTime\UnixTimeStamp.cs" />
+    <Compile Include="DateTime\UnixTimestampConverter.cs" />
     <Compile Include="UrlParser.cs" />
     <Compile Include="Things\VotableThing.cs" />
-    <Compile Include="RateLimitException.cs" />
+    <Compile Include="Exceptions\RateLimitException.cs" />
     <Compile Include="WebAgent.cs" />
     <Compile Include="Wiki\Wiki.cs" />
     <Compile Include="Wiki\WikiPage.cs" />
@@ -102,7 +102,7 @@
     <Compile Include="Domain.cs" />
     <Compile Include="TBUserNote.cs" />
     <Compile Include="ToolBoxUserNotes.cs" />
-    <Compile Include="ToolBoxUserNotesException.cs" />
+    <Compile Include="Exceptions\ToolBoxUserNotesException.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
