Banned user additions
* Add params for ban notes, duration, and PM message
* Add UnBanUser
* Add BannedUsers listing to Subreddit
* Re-add missing parsing/init for Contributor

--- a/RedditSharp/RedditSharp.csproj
+++ b/RedditSharp/RedditSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="BotWebAgent.cs" />
     <Compile Include="Moderator Actions\ModActionType.cs" />
+    <Compile Include="Things\BannedUser.cs" />
     <Compile Include="Things\Contributor.cs" />
     <Compile Include="Things\ModAction.cs" />
     <Compile Include="Extensions\DateTimeExtensions\DateTimeExtensions.cs" />
