I changed it so that it works with normal syntax, aswell as added a global message suppression file so that currently no one in visual studio 2017 gets the annoying messages, aswell as one central location to disable them if neccessary

--- a/RedditSharp/RedditSharp.csproj
+++ b/RedditSharp/RedditSharp.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="BotWebAgent.cs" />
     <Compile Include="Flairs\FlairTemplate.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Moderator Actions\ModActionType.cs" />
     <Compile Include="Things\BannedUser.cs" />
     <Compile Include="Things\Contributor.cs" />
