--- a/RedditSharp/RedditSharp.nuspec
+++ b/RedditSharp/RedditSharp.nuspec
@@ -22,10 +22,9 @@
    <language>en-US</language>
    <dependencies>
      <dependency id="Newtonsoft.Json" version="8.0.3" />
-     <dependency id="HtmlAgilityPack" version="1.4.9" />
    </dependencies>
  </metadata>
  <files>
-   <file src="bin\Release\RedditSharp.dll" target="lib\Net40" />
+   <file src="bin\Release\RedditSharp.dll" target="lib\net462" />
  </files>
 </package>
