Remove C# 7 feature Fix SubredditImage parsing and add test case

--- a/UnitTesting/UnitTesting.csproj
+++ b/UnitTesting/UnitTesting.csproj
@@ -65,6 +65,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="MoreUnitTest.cs" />
+    <Compile Include="Subreddit Information\SubredditImageTests.cs" />
     <Compile Include="TestData\JsonGetComments.cs" />
     <Compile Include="TestData\More-3-4-5.cs" />
     <Compile Include="UnitTest1.cs" />
