--- a/RedditSharp/RedditSharp.csproj
+++ b/RedditSharp/RedditSharp.csproj
@@ -106,7 +106,9 @@
     <Compile Include="Exceptions\ToolBoxUserNotesException.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="RedditSharp.nuspec" />
+    <None Include="RedditSharp.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
