Added support for Multis (#35)
* Added support for Multis with Documentation on the functions. Added helper methods in WebAgent.cs for Put and Delete methods.

* Added Documentation to the MultiData class

* Update Naming Conventions to match the rest of the project.

* Pull Request Changes 1

Altered the Class mData to instead be MData. Added curly braces to if
statements that did not have them. Altered Constructor for Multi class
to reflect the rest of the project. Converted doubles for Created
properties to DateTime.

* Pull Request Changes 2

Updated Target Framework to 4.5.2 for UnitTesting

* Moved MData and MultiSubs to their own File. Fixed for loops to be foreach loops. Altered postMulti and putMulti to accept datatype MData.

--- a/RedditSharp/RedditSharp.csproj
+++ b/RedditSharp/RedditSharp.csproj
@@ -51,6 +51,10 @@
     <Compile Include="BotWebAgent.cs" />
     <Compile Include="Flairs\FlairTemplate.cs" />
     <Compile Include="Moderator Actions\ModActionType.cs" />
+    <Compile Include="Multi\MData.cs" />
+    <Compile Include="Multi\Multi.cs" />
+    <Compile Include="Multi\MultiData.cs" />
+    <Compile Include="Multi\MultiSubs.cs" />
     <Compile Include="Things\BannedUser.cs" />
     <Compile Include="Things\Contributor.cs" />
     <Compile Include="Things\ModAction.cs" />
