Fix bot web agent Remove Author property due to triggering web requests

--- a/RedditSharp/project.json
+++ b/RedditSharp/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "dependencies": {
     "NETStandard.Library": "1.6.0",
@@ -19,6 +19,7 @@
     }
   },
   "buildOptions": {
-    "xmlDoc": true
+    "xmlDoc": true,
+    "define": [ "DEBUG", "TRACE" ]
   }
 }
