Update project to export XML doc Update nuspec to correctly point at net45

--- a/RedditSharp/RedditSharp.nuspec
+++ b/RedditSharp/RedditSharp.nuspec
@@ -25,6 +25,8 @@
    </dependencies>
  </metadata>
  <files>
-   <file src="bin\Release\RedditSharp.dll" target="lib\Net40" />
+   <file src="bin\Release\RedditSharp.dll" target="lib\Net45" />
+   <file src="bin\Release\RedditSharp.pdb" target="lib\Net45" />
+   <file src="bin\Release\RedditSharp.xml" target="lib\Net45" />
  </files>
 </package>
