--- a/RedditSharp/project.json
+++ b/RedditSharp/project.json
@@ -7,7 +7,8 @@
     "System.Net.Security": "4.0.0",
     "System.Reflection.TypeExtensions": "4.1.0",
     "System.Threading.Thread": "4.0.0",
-    "System.Reactive.Linq": "3.1.1"
+    "System.Reactive.Linq": "3.1.1",
+    "System.Interactive.Async": "3.1.0"
   },
   "frameworks": {
     "net462": {
