--- a/RedditSharp/project.json
+++ b/RedditSharp/project.json
@@ -7,10 +7,6 @@
   },
   "dependencies": {
     "Newtonsoft.Json": "9.0.1",
-    "System.Net.Http": "4.1.0",
-    "System.Net.Security": "4.0.0",
-    "System.Reflection.TypeExtensions": "4.1.0",
-    "System.Threading.Thread": "4.0.0",
     "System.Reactive.Linq": "3.1.1",
     "System.Interactive.Async": "3.1.0"
   },
@@ -41,7 +37,7 @@
     }
   },
   "buildOptions": {
-    "xmlDoc": false,
+    "xmlDoc": true,
     "define": [ "DEBUG", "TRACE" ]
   },
   "scripts": {
