--- a/RedditSharp/project.json
+++ b/RedditSharp/project.json
@@ -36,7 +36,7 @@
     }
   },
   "buildOptions": {
-    "xmlDoc": false,
+    "xmlDoc": true,
     "define": [ "DEBUG", "TRACE" ]
   },
   "scripts": {
