--- a/RedditSharp/RedditSharp.csproj
+++ b/RedditSharp/RedditSharp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyTitle>RedditSharp</AssemblyTitle>
     <VersionPrefix>2.0.0</VersionPrefix>
-    <TargetFrameworks>netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3</TargetFrameworks>
     <AssemblyName>RedditSharp</AssemblyName>
     <PackageId>RedditSharp</PackageId>
     <PackageProjectUrl>https://github.com/CrustyJew/RedditSharp</PackageProjectUrl>
@@ -14,7 +14,9 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard1.6|AnyCPU'">
-    <DocumentationFile>bin\Debug\netstandard1.6\RedditSharp.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netstandard1.3\RedditSharp.xml</DocumentationFile>
+    <DefineConstants>TRACE;DEBUG;NETSTANDARD1_3</DefineConstants>
+    <OutputPath>bin\Debug\netstandard1.3\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
