Initial work toward allowing compound searches
Allowing single property comparison so far.  Holding this code to try a
different approach for AND search operator.

--- a/RedditSharp/RedditSharp.csproj
+++ b/RedditSharp/RedditSharp.csproj
@@ -51,6 +51,9 @@
   <ItemGroup>
     <Compile Include="BotWebAgent.cs" />
     <Compile Include="Flairs\FlairTemplate.cs" />
+    <Compile Include="Search\AdvancedSearch.cs" />
+    <Compile Include="Search\DefaultSearchFormatter.cs" />
+    <Compile Include="Search\ISearchFormatter.cs" />
     <Compile Include="Things\LiveUpdateEvent.cs" />
     <Compile Include="Things\LiveUpdate.cs" />
     <Compile Include="Moderator Actions\ModActionType.cs" />
