--- a/UnitTesting/UnitTesting.csproj
+++ b/UnitTesting/UnitTesting.csproj
@@ -70,6 +70,7 @@
     <Compile Include="TestData\More-3-4-5.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AdvancedSearchTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
