--- a/RedditSharp/RedditSharp.csproj
+++ b/RedditSharp/RedditSharp.csproj
@@ -53,7 +53,8 @@
     <Compile Include="Flairs\FlairTemplate.cs" />
     <Compile Include="Search\AdvancedSearch.cs" />
     <Compile Include="Search\DefaultSearchFormatter.cs" />
-    <Compile Include="Search\ISearchFormatter.cs" />
+    <Compile Include="Search\IAdvancedSearchFormatter.cs" />
+    <Compile Include="Search\SearchExpressionExtentions.cs" />
     <Compile Include="Things\LiveUpdateEvent.cs" />
     <Compile Include="Things\LiveUpdate.cs" />
     <Compile Include="Moderator Actions\ModActionType.cs" />
