Add new Moderator Permissions Fixes #183 Fixes #182

--- a/RedditSharpTests/RedditSharpTests.csproj
+++ b/RedditSharpTests/RedditSharpTests.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="private.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="secrets.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
