Use private.json instead of .config

--- a/RedditSharpTests/RedditSharpTests.csproj
+++ b/RedditSharpTests/RedditSharpTests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="private.config">
+    <None Update="private.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="secrets.json">
